# vtk-rs-bindings

./: README.md  ROADMAP.md
.github/workflows/: reuse.yml  test_stable_ubuntu-22_04.yml  test_stable_ubuntu-24_04.yml
vtk-rs/: linker-args.txt
vtk-rs/examples/: actor_visibility_demo.rs  area_picker_actor_refs.rs  billboard_text_demo.rs  clip_poly_data_demo.rs  contour_filter_demo.rs  fem_beam_glyph.rs  geometric_primitives.rs  interactive_beam_builder.rs  interactive_node_placement.rs  interactive_world_point_picker.rs  interactor_style_image_demo.rs  interactor_style_trackball_actor_demo.rs  legend_box_demo.rs  parametric_surfaces.rs  picking_demo.rs  scalar_bar_demo.rs  shrink_filter_demo.rs  smooth_poly_data_demo.rs  sphere_source.rs  superquadric_demo.rs  test_lookup_table.rs  text_actor_demo.rs  text_demo.rs  threshold_demo.rs  warp_vector_demo.rs  world_point_picker_demo.rs
vtk-rs/libvtkrs/: CMakeLists.txt
vtk-rs/libvtkrs/include/: vtk_actor.h  vtk_actor.rs.h  vtk_area_picker.rs.h  vtk_clip_poly_data.h  vtk_clip_poly_data.rs.h  vtk_contour_filter.h  vtk_contour_filter.rs.h  vtk_data_set_mapper.h  vtk_data_set_mapper.rs.h  vtk_image_data.h  vtk_image_data.rs.h  vtk_interactor_style_custom.h  vtk_interactor_style_image.h  vtk_interactor_style_trackball_actor.h  vtk_interactor_style_trackball_actor.rs.h  vtk_legend_box_actor.h  vtk_legend_box_actor.rs.h  vtk_lookup_table.h  vtk_lookup_table.rs.h  vtk_plane.h  vtk_plane.rs.h  vtk_prop3d_collection.h  vtk_render_window.h  vtk_render_window.rs.h  vtk_renderer.h  vtk_renderer.rs.h  vtk_scalar_bar_actor.h  vtk_scalar_bar_actor.rs.h  vtk_shrink_filter.h  vtk_shrink_filter.rs.h  vtk_smooth_poly_data_filter.h  vtk_smooth_poly_data_filter.rs.h  vtk_text_actor.h  vtk_text_actor.rs.h  vtk_threshold.h  vtk_threshold.rs.h  vtk_unstructured_grid.h  vtk_warp_vector.h  vtk_warp_vector.rs.h  vtk_world_point_picker.h  (+1 more)
vtk-rs/libvtkrs/src/: vtk_actor.cpp  vtk_clip_poly_data.cpp  vtk_contour_filter.cpp  vtk_data_set_mapper.cpp  vtk_image_data.cpp  vtk_interactor_style_image.cpp  vtk_interactor_style_trackball_actor.cpp  vtk_legend_box_actor.cpp  vtk_lookup_table.cpp  vtk_plane.cpp  vtk_prop3d_collection.cpp  vtk_render_window.cpp  vtk_renderer.cpp  vtk_scalar_bar_actor.cpp  vtk_shrink_filter.cpp  vtk_smooth_poly_data_filter.cpp  vtk_text_actor.cpp  vtk_threshold.cpp  vtk_unstructured_grid.cpp  vtk_warp_vector.cpp  vtk_world_point_picker.cpp
vtk-rs/src/: actor_ref.rs  lib.rs  vtk_actor.rs  vtk_algorithm.rs  vtk_area_picker.rs  vtk_camera.rs  vtk_camera_observers.rs  vtk_cell_picker.rs  vtk_clip_poly_data.rs  vtk_command.rs  vtk_contour_filter.rs  vtk_cube_axes_actor.rs  vtk_data_set_mapper.rs  vtk_follower.rs  vtk_glyph_3d.rs  vtk_image_data.rs  vtk_interactor_style_custom.rs  vtk_interactor_style_image.rs  vtk_interactor_style_trackball_actor.rs  vtk_legend_box_actor.rs  vtk_lookup_table.rs  vtk_parametric_function.rs  vtk_parametric_function_source.rs  vtk_parametric_klein.rs  vtk_parametric_mobius.rs  vtk_parametric_torus.rs  vtk_plane.rs  vtk_point_picker.rs  vtk_poly_data.rs  vtk_prop3d_collection.rs  vtk_prop_picker.rs  vtk_render_window.rs  vtk_render_window_interactor.rs  vtk_renderer.rs  vtk_scalar_bar_actor.rs  vtk_shrink_filter.rs  vtk_smooth_poly_data_filter.rs  vtk_superquadric_source.rs  vtk_text_actor.rs  vtk_text_source.rs  (+4 more)
vtk-wrap/: Cargo.toml
